# MacAPI

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_POLICY.md  README.md  SECURITY.md  WORKFLOW_STATE.md  cert.py  com.user.macapi.plist  crypto.py  keychain.py  main.py  opencode.json  password_hash.py  pyproject.toml  setup.sh  typer.py
.claude/rules/: security-mandatory.md
.github/workflows/: test.yml
.opencode/agents/: commit-message.md  debater.md  implementor.md  linter.md  planner.md  reviewer.md  security-reviewer.md  tester.md
tests/: test_cert.py  test_crypto.py  test_keychain.py  test_password_hash.py  test_paths.py  test_server.py  test_typer.py
tools/: print_secret.py
