[project]
name = "macapi"
version = "0.2.0"
description = "A background API for remote Mac control with on-device quantum-resistant encryption from an iOS Shortcut"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=42.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "pyobjc-framework-Quartz>=12.1",
    "pyobjc-framework-Security>=12.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
